first question is in progress

--- a/assignment5.ipynb
+++ b/assignment5.ipynb
@@ -39,6 +39,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "$$ f(w, b) = \\frac{e^{w+b} w + \\frac{1}{1+e^{-w}} + b}{(\\frac{1}{1+e^{-b}} + \\frac{1}{1+e^{-w}})²}$$\n",
+    "\n",
+    "$$\\frac{\\partial f(w, b)}{\\partial w} = \\frac{\\big[e^{w+b} w + \\frac{1}{1+e^{-w}} + b\\big] = U}{\\big[\\big(\\frac{1}{1+e^{-b}} + \\frac{1}{1+e^{-w}}\\big)^2\\big] = V}; \\Big(\\frac{U}{V}\\Big)'= \\frac{U'V - V'U}{V^2}$$ \n",
+    "\n",
+    "$$U = e^{w+b} w + \\frac{1}{1+e^{-w}} + b  => \\frac{dU}{dw} = \\frac{d}{dw}(e^{w+b} w) + \\frac{d}{dw}\\big(1+e^{-w}\\big)^{-1} + 0$$\n",
+    "\n",
+    "$$ = e^{w+b} w + e^{w+b} + \\frac{d}{dw}\\big(1+e^{-w}\\big)^{-1}$$\n",
+    "\n",
+    "$$ = e^{w+b} w + e^{w+b} + (-1)\\big(1+e^{-w}\\big)^{-2}(e^{-w})(-1)$$ \n",
+    "\n",
+    "$$ U' = e^{w+b}(w+1) + \\sigma(w)(1 - \\sigma(w))$$ \n",
+    "\n",
+    "$$ V = \\Big(\\frac{1}{1+e^{-b}} + \\frac{1}{1+e^{-w}}\\Big)^2 => \\frac{dV}{dw} = 2\\big[\\big((1+e^{-b})^{-1} + (1+e^{-w})^{-1}\\big)\\big](-1)\\big(1+e^{-w}\\big)^{-2}(e^{-w})(-1) $$ \n",
+    "\n",
+    "$$ V' = 2\\big[\\sigma(b) + \\sigma(w)\\big]\\sigma(w)\\big(1 - \\sigma(w) \\big) $$ \n",
+    "\n",
+    "We have all ingredients, now it's time to plug them into the main equation.\n",
+    "\n",
+    "$$\\frac{\\partial f(w, b)}{\\partial w} =\\frac{ \\big[e^{w+b}(w+1) + \\sigma(w)(1 - \\sigma(w))\\big]\\big(\\sigma(b) + \\sigma(w)\\big)^2  - \\big[2\\big(\\sigma(b) + \\sigma(w)\\big)\\sigma(w)(1 - \\sigma(w))\\big]\\big(e^{w+b}w+ \\sigma(w)+b\\big)}{\\big(\\sigma(b) + \\sigma(w)\\big)^{4}}$$\n",
+    "simplify: $$\\frac{\\partial f(w, b)}{\\partial w} =\\frac{ \\big[e^{w+b}(w+1) + \\sigma(w)(1 - \\sigma(w))\\big](\\sigma(b) + \\sigma(w))  -  2\\sigma(w)(1 - \\sigma(w))\\big(e^{w+b}w+ \\sigma(w)+b\\big)}{\\big(\\sigma(b) + \\sigma(w)\\big)^{3}}$$\n",
+    "Similar process for $\\frac{\\partial f(w, b)}{\\partial b}$\n",
+    "\n",
+    "$$ \\frac{dU}{db} = U' = e^{w+b}w(1) + 1$$\n",
+    "$$ \\frac{dV}{db} = V' = 2\\big[\\sigma(b) + \\sigma(w)\\big]\\sigma(b)\\big(1 - \\sigma(b)\\big) $$ \n",
+    "\n",
+    "$$\\frac{\\partial f(w, b)}{\\partial b} =\\frac{ (e^{w+b}w+1) (\\sigma(b) + \\sigma(w))  -  2(e^{w+b}+ \\sigma(w)+b)\\sigma(b)(1 - \\sigma(b))}{\\big(\\sigma(b) + \\sigma(w)\\big)^{3}}$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$b)$ Decompose the function $f(w, b)$ into primitives. Rewrite the function using these primitives. ($0.5$ points)"
    ]
   },
@@ -49,10 +81,24 @@
    "outputs": [],
    "source": [
     "# TODO: Write function primitives in python\n",
+    "import numpy as np\n",
+    "\n",
     "\n",
     "# Example\n",
-    "def square(x):\n",
-    "    return x**2"
+    "def sigma(x):\n",
+    "    return (1+np.exp(x))**(-1)\n",
+    "\n",
+    "def multp(w+b):\n",
+    "    return np.exp(w+b)*w\n",
+    "\n",
+    "def numerator(w,b):\n",
+    "    return multp(w+b) + sigma(w) + b\n",
+    "\n",
+    "def denominator(w,b):\n",
+    "    return (sigma(b) + sigma(w))**2\n",
+    "\n",
+    "def f(w,b):\n",
+    "    return numerator(w,b)/denominator(w,b)\n"
    ]
   },
   {
@@ -543,7 +589,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
