--- a/assignment5.ipynb
+++ b/assignment5.ipynb
@@ -76,9 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-529bbe009f8f>, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-529bbe009f8f>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    def multp(w+b):\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Write function primitives in python\n",
     "import numpy as np\n",
@@ -118,7 +127,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Specifiy derivatives of the primitives in python\n",
@@ -138,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Compute the forward pass using the primitives defined above\n",
@@ -157,7 +170,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Compute the backward pass using the derivatives of the primitives defined above. \n",
@@ -183,7 +198,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Imports\n",
@@ -206,7 +223,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Get some data\n",
@@ -219,7 +238,7 @@
     "\n",
     "# Plot the training data and color the data point according to their class label\n",
     "fig, axes = plt.subplots(1, 1)\n",
-    "axes.scatter(X_train[: , 0], X_train[: , 1], c=y_train, cmap='Set1')\n",
+    "axes.scatter(X_train[: , 0], X_train[: , 1], c=y_train.reshape(270,), cmap='Set1')\n",
     "axes.set_title('Training Data');"
    ]
   },
@@ -273,7 +292,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: implement the function below.\n",
@@ -286,7 +307,10 @@
     "    :param x: The input to the layer.\n",
     "    :return: A tuple where the first element is the linear combination of the input with the weights and the biases of the linear layer and the second element is the shape of the output matrix.\n",
     "    \"\"\"\n",
-    "    pass"
+    "    W1 = tf.get_variable('W1', [state_dim, input_shape],initializer=tf.random_normal_initializer())\n",
+    "    b1 = tf.get_variable('b1', [input_shape],initializer=tf.constant_initializer(0))\n",
+    "    v = tf.matmul(x, W1) + b1\n",
+    "    return v\n"
    ]
   },
   {
@@ -299,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: implement the function below.\n",
@@ -309,7 +335,9 @@
     "    :param x: The input to the activation function.\n",
     "    :return: The output of the activation function.\n",
     "    \"\"\"\n",
-    "    pass"
+    "    x[x<=0] = 0\n",
+    "    x[x>0] = 1\n",
+    "    return x\n"
    ]
   },
   {
@@ -322,7 +350,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: implement the function below.\n",
@@ -332,7 +362,7 @@
     "    :param x: The input to the activation function.\n",
     "    :return: The output of the activation function.\n",
     "    \"\"\"\n",
-    "    pass"
+    "    return 1/(1 + np.exp(-x))\n"
    ]
   },
   {
@@ -345,7 +375,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: implement the function below.\n",
@@ -356,7 +388,11 @@
     "    :param unscaled_logits: The final activations produced by your model.\n",
     "    :return: The loss value (a scalar).\n",
     "    \"\"\"\n",
-    "    pass"
+    "    m = labels.shape[0]\n",
+    "    p = softmax(unscaled_logits)\n",
+    "    log_likelihood = -np.log(p[range(m),labels])\n",
+    "    loss = np.sum(log_likelihood) / m\n",
+    "    return loss"
    ]
   },
   {
@@ -369,7 +405,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n_hidden_units = 128\n",
@@ -395,7 +433,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: implement the function below.\n",
@@ -418,7 +458,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: implement the function below.\n",
@@ -450,7 +492,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Define the computational graph for your model\n",
@@ -479,7 +523,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Define the gradient descent optimizer\n",
@@ -489,7 +535,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Define training parameters\n",
@@ -589,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
