first ready with comments

--- a/nniaassignment7final_damyana.ipynb
+++ b/nniaassignment7final_damyana.ipynb
@@ -67,16 +67,18 @@
     "# First a \"Tree\" using \"DecisionTreeRegressor\" and second a Regularized version obtain using \"BaggingRegressor\"\n",
     "# on this Tree, labelled \"Bagging (Tree)\". (2 points)\n",
     "\n",
-    "estimators = [(\"Tree\", DecisionTreeRegressor()\n",
+    "estimators = [(\"Tree\", DecisionTreeRegressor(random_state=0)\n",
     "              ),\n",
-    "              (\"Bagging (Tree)\", BaggingRegressor(DecisionTreeRegressor())\n",
+    "              (\"Bagging (Tree)\", BaggingRegressor(DecisionTreeRegressor(random_state=0))\n",
     "              )]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n_estimators = len(estimators)\n",
@@ -139,18 +141,14 @@
     "    y_predict = np.zeros(n_test)\n",
     "        \n",
     "    # Train the estimator (1 point)\n",
-    "    # TODO\n",
     "    estimator.fit(X_train, y_train)\n",
     "    \n",
     "    #Predict results using the estimator on X_test (1 point)\n",
-    "    # TODO\n",
-    "    ##### ??? do I need a copy??  y_predict[:]\n",
     "    y_predict = estimator.predict(X_test)\n",
     "    \n",
     "    y_error = np.zeros(n_test)\n",
     "    \n",
     "    # Compute the mean sqaured error using y_test and y_predict and store it in y_error (1 point)\n",
-    "    # TODO\n",
     "    y_error = (y_test - y_predict)**2\n",
     "    \n",
     "    print(\"{0}: {1:.4f} (error)\".format(name,np.mean(y_error)))\n",
@@ -169,6 +167,15 @@
    "metadata": {},
    "source": [
     "a) Explain the differences (in 2-3 sentences) between the plots you obtain for **Tree** and **Bagging (Tree)**. (2 points)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The plot in **Tree** reflects the test error of a single decision tree estimation y_predict of y ('Salary') based on the parameters of the model. The plot in **Bagging(Tree)** reflects the test error of y_predict by a regularized by bagging model; the error is lower than this in **Tree**.\n",
+    "\n",
+    "Bagging is a regularization technique where multiple training sets are sampled (with replacement) from the the original training set; the classification is performed on each of these training sets (default value for BaggingRegressor is 10) and the results of these classifications is averaged. In this way the variance of the prediction is reduced which leads to more robust model with lower overall mean squared error."
    ]
   },
   {
