ass7 is almost done

--- a/nniaassignment7-ding1.ipynb
+++ b/nniaassignment7-ding1.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -108,11 +108,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "not enough values to unpack (expected 2, got 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-509f86fce767>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Loop over estimators to compare\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mestimator\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mestimators\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;31m# Compute predictions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: not enough values to unpack (expected 2, got 1)"
+     ]
+    }
+   ],
    "source": [
     "# Plot Figures and report error using the different ensemble methods\n",
     "plt.figure(figsize=(10,3))\n",
@@ -134,7 +144,7 @@
     "    # Compute the mean sqaured error using y_test and y_predict and store it in y_error (1 point)\n",
     "    # TODO\n",
     "    \n",
-    "    print(\"{0}: {1:.4f} (error)\".format(name,np.mean(y_error))\n",
+    "    print(\"{0}: {1:.4f} (error)\".format(name,np.mean(y_error)))\n",
     "    \n",
     "    # Plot the Result\n",
     "    plt.subplot(1,n_estimators,n+1)\n",
@@ -165,7 +175,7 @@
    "source": [
     "**Goal:** To study how increasing neurons of a neural network (model complexity) affects the Early Stopping threshold.\n",
     "\n",
-    "Download **MNIST** dataset from the NNIA's resource page on Piazza. We first update the feedforward neural network code below (at \"#TODO\") to calculate training and validation error at every 100 iterations of the training scheme. Then using this code for a different number of neurons (50, 100 and 200), plot the variation of training and validation error for every 100th iteration up to 1000 iterations. Studying these plots answer the questions given below.\n",
+    "Download **MNIST** dataset from the NNIA's resource page on Piazza. We first update the feedforward neural network code below (at \"#TODO\") to calculate training and validation error at every 100 iterations of the training scheme. Then using this code for a different number of neurons (50 and 200), plot the variation of training and validation error for every 100th iteration up to 700 iterations. Studying these plots answer the questions given below.\n",
     "\n",
     "Note: to calculate the validation error use the test set as a proxy validation set. Also, notice the extra arguments that need to be provided to calculate the validation error at every 100 iterations in the fit function."
    ]
@@ -271,10 +281,10 @@
     "    def __init__(self, n_output, n_features, n_hidden=30,\n",
     "                 l1=0.0, l2=0.0, epochs=50, eta=0.001,\n",
     "                 alpha=0.0, decrease_const=0.0, shuffle=True,\n",
-    "                 minibatches=1, random_state=None):\n",
+    "                 minibatches=1, random_state=1):\n",
     "\n",
-    "        np.random.seed(random_state)\n",
     "        self.n_output = n_output\n",
+    "        self.r = np.random.RandomState(random_state)\n",
     "        self.n_features = n_features\n",
     "        self.n_hidden = n_hidden\n",
     "        self.w1, self.w2 = self._initialize_weights()\n",
@@ -309,10 +319,10 @@
     "    def _initialize_weights(self):\n",
     "        \"\"\"Initialize weights with small random numbers.\"\"\"\n",
     "        \n",
-    "        w1 = np.random.uniform(-1.0, 1.0,\n",
+    "        w1 = self.r.uniform(-1.0, 1.0,\n",
     "                               size=self.n_hidden*(self.n_features + 1))\n",
     "        w1 = w1.reshape(self.n_hidden, self.n_features + 1)\n",
-    "        w2 = np.random.uniform(-1.0, 1.0,\n",
+    "        w2 = self.r.uniform(-1.0, 1.0,\n",
     "                               size=self.n_output*(self.n_hidden + 1))\n",
     "        w2 = w2.reshape(self.n_output, self.n_hidden + 1)\n",
     "        \n",
@@ -545,7 +555,7 @@
     "            # respectively. This will help plotting the errors in the following code (2 points)\n",
     "            # TODO\n",
     "            if self.shuffle:\n",
-    "                idx = np.random.permutation(y_data.shape[0])\n",
+    "                idx = self.r.permutation(y_data.shape[0])\n",
     "                X_data, y_enc = X_data[idx], y_enc[:, idx]\n",
     "\n",
     "            mini = np.array_split(range(y_data.shape[0]), self.minibatches)\n",
@@ -579,17 +589,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load train and test data\n",
     "X_train, y_train = load_mnist('mnist/', kind='train')\n",
+    "r = np.random.RandomState(1)\n",
+    "idx = r.choice(y_train.shape[0],10000,replace=False)\n",
+    "X_train, y_train = X_train[idx], y_train[idx]\n",
     "print('Rows: %d, columns: %d' % (X_train.shape[0], X_train.shape[1]))\n",
     "    \n",
     "X_test, y_test = load_mnist('mnist/', kind='t10k')\n",
     "print('Rows: %d, columns: %d' % (X_test.shape[0], X_test.shape[1]))\n",
     "\n",
-    "neurons = [50, 100, 200]\n",
+    "neurons = [50, 200]\n",
     "\n",
     "plt.figure(figsize=(10,3))\n",
     "for n, hidden in enumerate(neurons):\n",
@@ -597,14 +612,14 @@
     "    nn = MLP(n_output=10, \n",
     "             n_features=X_train.shape[1], \n",
     "             n_hidden=hidden, \n",
-    "             l2=0.1, \n",
+    "             l2=0.0, \n",
     "             l1=0.0, \n",
-    "             epochs=1000, \n",
+    "             epochs=700, \n",
     "             eta=0.001,\n",
     "             alpha=0.001,\n",
     "             decrease_const=0.00001,\n",
     "             minibatches=50, \n",
-    "             shuffle=True,\n",
+    "             shuffle=False,\n",
     "             random_state=1)\n",
     "    \n",
     "    # Fit the data with NN\n",
@@ -612,12 +627,12 @@
     "             validation_freq=100,\n",
     "             X_val=X_test, y_val=y_test)\n",
     "    \n",
-    "    iter = [ i*100 for i in range(1000 // 100)]\n",
+    "    iter = [ i*100 for i in range(700 // 100)]\n",
     "    plt.subplot(1,len(neurons),n+1)\n",
     "    plt.plot(iter, nn.train_err_)\n",
     "    plt.plot(iter, nn.val_err_)\n",
     "    plt.yscale('log')\n",
-    "    plt.ylim([0, 100])\n",
+    "    plt.ylim([0, 20])\n",
     "    plt.ylabel('Error')\n",
     "    plt.xlabel('Epochs')\n",
     "    plt.title(\"Neurons: {0} (error)\".format(hidden))\n",
@@ -662,7 +677,7 @@
     "$$ r^{(l)}_j \\sim Bernoulli(p) * \\frac{1}{p}$$\n",
     "This scheme allows the scaling to be learned during training and hence, no switching between code blocks is required.\n",
     "\n",
-    "Update the code below (specified by #TODO) to implement inverted dropout for a hidden layer size of 200 neurons."
+    "Update the code below (specified by #TODO) to implement inverted dropout for a hidden layer size of 50 neurons. Running the code will show you variation of training and test accuracy for the dropout values given in the code below. "
    ]
   },
   {
@@ -768,10 +783,10 @@
     "    def __init__(self, n_output, n_features, n_hidden=30,\n",
     "                 l1=0.0, l2=0.0, epochs=50, eta=0.001,\n",
     "                 alpha=0.0, decrease_const=0.0, shuffle=True,\n",
-    "                 minibatches=1, random_state=None, dropout = 0.5):\n",
+    "                 minibatches=1, random_state=1, dropout = 0.5):\n",
     "\n",
-    "        np.random.seed(random_state)\n",
     "        self.n_output = n_output\n",
+    "        self.r = np.random.RandomState(random_state)\n",
     "        self.n_features = n_features\n",
     "        self.n_hidden = n_hidden\n",
     "        self.w1, self.w2 = self._initialize_weights()\n",
@@ -787,6 +802,8 @@
     "        # This will allow sharing dropout information during forward and backward pass of the neural networks. Note \n",
     "        # that the __init__ function has already been modified to include dropout coefficient as an argument. (0.5 points)\n",
     "        #TODO\n",
+    "        self.mask = None\n",
+    "        self.dropout = dropout\n",
     "\n",
     "    def _encode_labels(self, y, k):    \n",
     "        \"\"\"Encode the labels using one-hot representation\n",
@@ -810,10 +827,10 @@
     "    def _initialize_weights(self):\n",
     "        \"\"\"Initialize weights with small random numbers.\"\"\"\n",
     "        \n",
-    "        w1 = np.random.uniform(-1.0, 1.0,\n",
+    "        w1 = self.r.uniform(-1.0, 1.0,\n",
     "                               size=self.n_hidden*(self.n_features + 1))\n",
     "        w1 = w1.reshape(self.n_hidden, self.n_features + 1)\n",
-    "        w2 = np.random.uniform(-1.0, 1.0,\n",
+    "        w2 = self.r.uniform(-1.0, 1.0,\n",
     "                               size=self.n_output*(self.n_hidden + 1))\n",
     "        w2 = w2.reshape(self.n_output, self.n_hidden + 1)\n",
     "        \n",
@@ -884,10 +901,12 @@
     "        a2 = self._add_bias_unit(a2, how='row')\n",
     "        \n",
     "        # Implement inverted dropout using class variables dropout and activation variable (a2) for the forward\n",
-    "        # pass for the second hidden layer below. To create the mask you will have to use np.random.binomial for \n",
+    "        # pass for the second hidden layer below. To create the mask you will have to use self.r.binomial for \n",
     "        # generating the bernoulli distribution. The mask created here needs to be stored in the appropriate mask\n",
     "        # variable defined in the __init__ function for further use by the backward pass. (2.5 points)\n",
     "        #TODO\n",
+    "        self.mask=np.divide(self.r.binomial(1,self.dropout,size=self.n_hidden),self.dropout)\n",
+    "        a2[1:,:]=a2[1:,:]*self.mask[:,np.newaxis]\n",
     "        \n",
     "        z3 = w2.dot(a2)\n",
     "        a3 = self._sigmoid(z3)\n",
@@ -926,8 +945,13 @@
     "            Regularized cost.\n",
     "\n",
     "        \"\"\"\n",
+    "        np.seterr(divide='ignore')\n",
     "        term1 = -y_enc * (np.log(output))\n",
     "        term2 = (1.0 - y_enc) * np.log(1.0 - output)\n",
+    "        \n",
+    "        term1[np.isneginf(term1)] = 0\n",
+    "        term2[np.isneginf(term2)] = 0\n",
+    "        \n",
     "        cost = np.sum(term1 - term2)\n",
     "        L1_term = self._L1_reg(self.l1, w1, w2)\n",
     "        L2_term = self._L2_reg(self.l2, w1, w2)\n",
@@ -971,6 +995,7 @@
     "        # Implement dropout for the backward pass, use class variables for mask and dropout for this task (2.5 points)\n",
     "        # TODO\n",
     "        \n",
+    "        sigma2[1:, :]=np.divide((sigma2[1:,:]*self.mask[:,np.newaxis]),self.dropout)\n",
     "        sigma2 = sigma2[1:, :]\n",
     "        grad1 = sigma2.dot(a1)\n",
     "        grad2 = sigma3.dot(a2.T)\n",
@@ -1075,34 +1100,53 @@
     "\n",
     "# Load train and test data\n",
     "X_train, y_train = load_mnist('mnist/', kind='train')\n",
+    "r = np.random.RandomState(1)\n",
+    "idx = r.choice(y_train.shape[0],5000,replace=False)\n",
+    "X_train, y_train = X_train[idx], y_train[idx]\n",
     "print('Rows: %d, columns: %d' % (X_train.shape[0], X_train.shape[1]))\n",
     "    \n",
     "X_test, y_test = load_mnist('mnist/', kind='t10k')\n",
+    "idx = r.choice(y_test.shape[0],5000,replace=False)\n",
+    "X_test, y_test = X_test[idx], y_test[idx]\n",
     "print('Rows: %d, columns: %d' % (X_test.shape[0], X_test.shape[1]))\n",
     "  \n",
-    "# create a MLP object\n",
-    "for dropout in np.arange(0.0, 1.0, 0.1):\n",
+    "vals = np.arange(0.1, 1.0, 0.2)\n",
+    "for dropout in vals:\n",
+    "    # create a MLP object\n",
     "    print('Dropout: %.2f' % dropout)\n",
     "    nn = MLP(n_output=10, \n",
     "             n_features=X_train.shape[1], \n",
-    "             n_hidden=200, \n",
-    "             l2=0.1, \n",
+    "             n_hidden=50, \n",
+    "             l2=0.0, \n",
     "             l1=0.0, \n",
-    "             epochs=1000, \n",
+    "             epochs=500, \n",
     "             eta=0.001,\n",
     "             alpha=0.001,\n",
     "             decrease_const=0.00001,\n",
     "             minibatches=50, \n",
-    "             shuffle=True,\n",
+    "             shuffle=False,\n",
     "             random_state=1,\n",
     "             dropout = dropout)\n",
     "    \n",
     "    # Fit the data with NN\n",
-    "    nn.fit(X_train, y_train, print_progress=False)\n",
+    "    nn.fit(X_train, y_train, print_progress=False,validation_freq=100,\n",
+    "             X_val=X_test, y_val=y_test)\n",
     "    \n",
     "    # Print the training accuracy and test accuracy in percentage for each value of dropout. This part is same as \n",
     "    # a question asked in Exercise 2, so you may use the code from there. (0 points) \n",
-    "    # TODO"
+    "    # TODO\n",
+    "    iter = [ i*100 for i in range(700 // 100)]\n",
+    "    plt.subplot(1,len(neurons),n+1)\n",
+    "    plt.plot(iter, nn.train_err_)\n",
+    "    plt.plot(iter, nn.val_err_)\n",
+    "    plt.yscale('log')\n",
+    "    plt.ylim([0, 20])\n",
+    "    plt.ylabel('Error')\n",
+    "    plt.xlabel('Epochs')\n",
+    "    plt.title(\"Neurons: {0} (error)\".format(hidden))\n",
+    "    \n",
+    "plt.show()\n",
+    "    "
    ]
   },
   {
@@ -1111,7 +1155,16 @@
    "source": [
     "a) Intuitively, L1 and L2 minimize the interdependence and the value of feature weights by penalising the loss function. In the same vein, what kind of interdependence does dropout affect? (0.5 points)\n",
     "\n",
-    "b) Why can Dropout be considered as an approximation to Bagging? (1 point)"
+    "\n",
+    "A fully connected layer occupies most of the parameters, and hence, neurons develop co-dependency amongst each other during training which curbs the individual power of each neuron leading to over-fitting of training data.\n",
+    "\n",
+    "b) Why can Dropout be considered as an approximation to Bagging? (1 point)\n",
+    "\n",
+    "Bagging, in which each member of the ensemble is trained with a different subsample of the input data, and thus has learned only a subset of the whole possible input feature space.\n",
+    "\n",
+    "Dropout, then can be seen as an extreme version of bagging. At each training step in a mini-batch, the dropout procedure creates a different network (by randomly removing some units), which is trained using backpropagation as usual. Conceptually, then, the whole procedure is akin to using an ensemble of many different networks (one per step) each trained with a single sample.\n",
+    "\n",
+    "At test time the whole network is used (all units) but with scaled down weights. Mathematically this approximates ensemble averaging (using the geometric mean as average)."
    ]
   },
   {
@@ -1158,7 +1211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
