question 1 is completely done

--- a/assignment8_aydan.ipynb
+++ b/assignment8_aydan.ipynb
@@ -239,7 +239,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\color{violet}{Ans}$:"
+    "$\\color{violet}{Ans}$: If we look at the gradient signals of sigmoid function the maximum is 1/4 ($\\sigma'(0) = 1/4$). The range of the derivative of the cost function is always in $(0,1/4] $. In a 100-layer Feed Forward Neural Network, each neuron or “activity” is derived from the previous: it is the previous activity multiplied by some weight and then fed through an activation function. If we use the standard approach to initializing the weights in the network, then we'll choose the weights using Gaussian so the weights will usually satisfy $|w_j|<1$. While propagating the error through the network to update the weights, we apply chain rule such as \n",
+    "\n",
+    "\n",
+    "$$ \\frac{\\partial error}{\\partial w_1} = \\frac{\\partial error}{\\partial output} * \\frac{\\partial output}{\\partial hidden_{99}} * ... * \\frac{\\partial hidden_1}{\\partial w_1}$$\n",
+    "If we take the last layer $ z_{100}= hidden_{99} * w_{100}$\n",
+    "$$\\frac{\\partial output}{\\partial hidden_{99}} = \\frac{\\partial sigmoid(z_{100})}{\\partial z_{100}} * w_{100}$$\n",
+    "The layer before the last one $ z_{99}= hidden_{98} * w_{99}$\n",
+    "$$\\frac{\\partial hidden_{99}}{\\partial hidden_{98}} = \\frac{\\partial sigmoid(z_{99})}{\\partial z_{99}} * w_{99}$$\n",
+    "\n",
+    "so on so forth.\n",
+    "Now, look at the magnitude of the terms in our chain rule expression:\n",
+    "\n",
+    "$\\frac{\\partial error}{\\partial w_1} = \\frac{\\partial error}{\\partial output} * \\overbrace{\\frac{\\partial sigmoid(z_{100})}{\\partial z_{100}}}^\\text{<1/4} *  \\overbrace{w_{100}}^\\text{<1} \\overbrace{\\frac{\\partial sigmoid(z_{99})}{\\partial z_{99}}}^\\text{<1/4} * \\overbrace{w_{99}}^\\text{<1}... * \\frac{\\partial hidden_1}{\\partial w_1}$\n",
+    "\n",
+    "As we've seen, the terms are typically less than 1/4 in magnitude. That means every time the gradient signal flows through a sigmoid gate, its magnitude always diminishes by one quarter (or more). As we backpropagate further back, we’d have many more small numbers in a product, creating an even tinier gradient. This problem occurs because of the gradient signals of sigmoid function. Since we do not need the derivative of sigmoid function during the forward pass, we only have it in the backward pass.\n"
    ]
   },
   {
@@ -254,7 +268,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\color{violet}{Ans}$: "
+    "$\\color{violet}{Ans}$: We can avoid the problem of gradient explosion by **gradient clipping**(or norm-clipping). Basically, we prevent gradients from blowing up by rescaling them so that their norm is at most a particular value $n$. I.e., if $||g|| > n$, where g is the gradient, we set\n",
+    "$$ g \\leftarrow \\frac{ng}{||g||} $$ \n",
+    "There are many instantiations of this idea (i.e. ||.|| could be L_2 norm) but the main concept is to limit the gradient to a maximum number and if the gradient exceeds that number, rescale the gradient parameters so the are limited within it. This customization retains the direction but limits the step size. "
    ]
   },
   {
@@ -625,7 +641,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\color{violet}{Ans}$:"
+    "$\\color{violet}{Ans}$: The mean values of gradient magnitudes start decreasing from for W4 = .014,  W3 = .011, W2 = .003, W1 = .00 (almost none).\n",
+    "While the change in the last layer (W4) very big (.014), in the first layer the change is so close to 0. It is obvious that the gradient signal is exponentially decreasing with the increase in number of steps. This causes that while W4 is adaptated very well within the first steps, W1 remains almost the same during the whole training.  "
    ]
   },
   {
@@ -639,7 +656,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\color{violet}{Ans}$:"
+    "$\\color{violet}{Ans}$: For the first 100 steps the accuracy shows remarkable improvement, at the same time the gradient signals of the layers decrease instantly. Between 700 - 1500 steps the accuracy improves but so slowly and we can see the changes in the gradient signals which are very small. After 2000 steps the accuracy doesn't improve at all and correspondently the gradient signals of the weights are almost 0. So we can understand that in the last 1000 steps, we reached the tails of the gradient of the sigmoid function therefore cannot make significant improvement because of the extremely small value. "
    ]
   },
   {
