task 2 first 3 questions

--- a/assignment8_aydan.ipynb
+++ b/assignment8_aydan.ipynb
@@ -59,7 +59,9 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -86,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# can be used to call .eval() on tensors\n",
@@ -290,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# import libraries and data\n",
@@ -335,7 +341,9 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# choose a subset of 5K samples (evenly distributed among all classes)\n",
@@ -397,7 +405,9 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Implement\n",
@@ -472,7 +482,9 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# TODO: Implement\n",
@@ -694,8 +706,8 @@
    "source": [
     "$\\color{violet}{Ans}$:\n",
     "\n",
-    "i) <br>\n",
-    "ii) "
+    "i) It is important to use learning rate decay in (mini-batch) SGD, else the algorithm may miss/overshoot the (local) optimum and as a consequence fluctuate around the minimum or diverge. This stems from the fact that the random sampling of m training examples introduces noise that does not vanish even when arriving at a minimum. <br>\n",
+    "ii) The advantage of using small batch size is that in this way the model is implicitly regularized. Another advantage is that this approach does not cause problems with cache memory limits. The advantage of using batches/SGD at all is that compared with Batch gradient descent it converges more quickly and is allowed to incorporate new training examples in a so-called online fashion. "
    ]
   },
   {
@@ -717,8 +729,12 @@
    "source": [
     "$\\color{violet}{Ans}$:\n",
     "\n",
-    "i) <br>\n",
-    "ii) "
+    "i) In contrast to vanilla SGD, Momentum accumulates in $v$ the gradient elements from the previous iterations. <br>\n",
+    "$v = \\alpha v - \\triangledown_{\\theta} \\left( \\frac{1}{m} \\sum^{m}_{i=1}L(f(x^{(i)}; \\theta), y^{(i)})\\right)\\\\\n",
+    "\\theta = \\theta + v$ <br>\n",
+    "The momentum term increases for dimensions whose gradients point in the same directions as at previous iterations and reduces the updates for dimensions whose gradients change directions. In this way Momentum can handle ravines and dampen oscillations as well as accelerate convergence.\n",
+    "<br>\n",
+    "ii) Momentum would be able to recover from entering a saddle point because it can be formuleted as the interdependance of two forces. The first takes into account the direction of the previous gradients and accelerates proportionally to the negative gradient of the cost function $-\\triangledown_{\\theta}J(\\theta)$. The second is opposed to it and proportional to $-v(t)$; it corresponds to viscous drag in physics terminology and acts as a \"friction\" slowing down movement in certain direction. \"Viscous drag is weak enough that the gradient can continue to cause motion until a minimum is reached, but strong enough to prevent motion if the gradient does not justify moving\" (DL book, p.299). In this case when reaching a saddle point, the algorithm will first go back and forth in one direction, dampening the progress. If there has consistently been positive progress in another direction, it ends up building up and going down that way."
    ]
   },
   {
@@ -742,9 +758,10 @@
    "metadata": {},
    "source": [
     "$\\color{violet}{Ans}$:  <br>\n",
-    "i)  <br>\n",
-    "ii) <br>\n",
-    "iii) <br>"
+    "i)  The basic idea behind AdaGrad is that the learning rate adapts based on the parameters in such way, that it decreases for more frequent parameters and increases for rarer ones. This is an advantage especially in settings where data is sparse and sparse parameters are more informative. <br>\n",
+    "ii) The learning rate decreases monotonically (as the term $\\frac{\\eta}{\\sqrt{G_{j,j}+\\epsilon}}$ accumulates the squared gradients in the denominator and their sum grows) to a point where the algorithm stops learning. \n",
+    "<br>\n",
+    "iii) One important property of the algorithm is that the learning rate adapts automatically and does not need to be adapted manually. Moreover, as already mentioned, the algorithm distinguishes between more and less sparse parameters and updates them accordingly.<br>"
    ]
   },
   {
@@ -867,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
